# midifiles

./: .gitattributes  .gitignore  LICENSE.txt  README.md  TODO.md
py/: MANIFEST.in  README-FL.rst  README.rst  setup.cfg  setup.py
py/data/: NewStuff.flp  rats.mid
py/src/: Trio.mid  Trio.txt  parse_flp  parse_midi  parse_pl
py/src/FLP/: __init__.py  base.py  partitioner.py
py/src/FLP/chunks/: track.py
py/src/FLP/messages/converters/: __init__.py  text.py
py/src/FLP/messagetypes/: core.py  int16messages.py  int32messages.py  int8messages.py  textmessages.py
py/src/MIDI/: __init__.py  partitioner.py
py/src/MIDI/Events/: __init__.py  event.py  meta.py  sysex.py
py/src/MIDI/Events/messages/: __init__.py  controls.py  exclusive.py  notes.py  other.py  sysex.py  systemCommon.py
py/src/MIDI/Events/messages/system/: __init__.py
py/src/MIDI/Events/system/: __init__.py  base.py  sysex.py  systemCommon.py
py/src/MIDI/chunks/: header.py  track.py
py/src/MIDI/timing/: __init__.py  smtpe.py
py/src/MIDI/util/: __init__.py  converters.py
py/src/PL/: base.py  partitioner.py
py/src/PL/chunks/: event.py  track.py
py/src/PL/messages/converters/: __init__.py
py/src/PL/messagetypes/: __init__.py  core.py  int16messages.py  int32messages.py  int8messages.py  textmessages.py
