[metadata]
name = FLPFile
version = 0.2.0
description = A simple FL Studio Project File parser
long_description = file: README.rst
author = Julian Porter
author_email = julian@porternet.org
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = FL Studio

[options]
python_requires = >=3.6
packages = find:

[options.package_data]
data = *.flp
