[metadata]
name = MIDIFile
version = 0.2.0
description = A simple MIDI and LPF File parser
long_description = file: README.rst
author = Julian Porter
author_email = julian@porternet.org
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = MIDI LPF

[options]
python_requires = >=3.6
packages = find:

[options.package_data]
data = *.flp
